# fsmgen

./: .gitignore  README.md  pyproject.toml
examples/: fork.yaml  nested.yaml  simple.yaml
fsmgen/: __init__.py  cli.py  codegen.py  parser.py  testbench.py
